<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    	<FrameLayout 
    		android:id="@android:id/tabcontent"
    		android:layout_width="fill_parent"
    		android:layout_height="0.0dip"
    		android:layout_weight="1.0"/>
    	<TabWidget 
    		android:id="@android:id/tabs"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.0"
    		android:visibility="gone"/>
    	<RadioGroup
    		android:id="@+id/main_tab"
    		android:background="@drawable/maintab_toolbar_bg"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center_vertical"
    		android:layout_gravity="bottom">
    		<RadioButton
    		    android:checked="true"
    			android:text="@string/main_home"
    			android:drawableTop="@drawable/ic_main_home"
    			android:id="@+id/radio_home"
    			style="@style/main_tab_button"/>
            <RadioButton
                android:text="@string/main_guide"
                android:drawableTop="@drawable/ic_main_guide"
                android:id="@+id/radio_guide"
                style="@style/main_tab_button"/>
    		<RadioButton
    			android:text="@string/main_latitude"
    			android:drawableTop="@drawable/ic_main_latitude"
    			android:id="@+id/radio_latitude"
    			style="@style/main_tab_button"
				android:checked="false" />
            <RadioButton
                android:text="@string/main_fm"
                android:drawableTop="@drawable/ic_main_radio"
                android:id="@+id/radio_fm"
                style="@style/main_tab_button"/>
            <RadioButton
                android:text="@string/main_pedia"
                android:drawableTop="@drawable/ic_main_pedia"
                android:id="@+id/radio_pedia"
                style="@style/main_tab_button"/>
    	</RadioGroup>
    </LinearLayout>
</TabHost>
