<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
  >

<LinearLayout 
    android:id="@+id/pop_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
   	android:background="#55ffffff"
    >
    
    <Button
        android:id="@+id/button_menu_share_url"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:text="@string/share_url"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_menu_share_picture"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:text="@string/share_picture"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_menu_cancel"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="20dip"
        android:text="@string/cancel"
        android:textStyle="bold" />

</LinearLayout>
</RelativeLayout>